fix: position mobile menu correctly on Chrome
CSS inset is Firefox only. :shrug:

--- a/css/blocks/Nav.css
+++ b/css/blocks/Nav.css
@@ -49,9 +49,12 @@ a.nav__item[aria-current="true"] {
 
 #mobile-nav__container {
   background: var(--dark);
+  bottom: 0;
+  left: 0;
   place-items: center;
   position: fixed;
-  inset: 0;
+  right: 0;
+  top: 0;
   z-index: 100;
 }
 
